--- a/res/layout/update_dialog.xml
+++ b/res/layout/update_dialog.xml
@@ -1,85 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp" >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+ 	android:background="@drawable/dialog_check_new_version">
 
-    <RelativeLayout
-        android:id="@+id/rl_version_update_dialog_bg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:background="@drawable/dialog_check_new_version">
-
+    
         <TextView
-            android:id="@+id/version_name"
+            android:id="@+id/version_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:layout_marginTop="59dp"
-            android:layout_marginLeft="38dp" />
+            android:text="钱富通V2.0震撼发布"
+            android:textSize="14sp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="105dp" />
         <TextView
-            android:id="@+id/package_size"
+            android:id="@+id/update_content_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/version_name"
-            android:padding="4dp"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:layout_marginLeft="38dp" />
+            android:maxLines="2"
+            android:textSize="14sp"
+            android:layout_below="@id/version_title"
+            android:paddingTop="10dp"
+            android:layout_marginLeft="56dp"
+            />
         <TextView
-            android:id="@+id/update_message"
+            android:id="@+id/update_content_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="3dp"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:layout_below="@+id/package_size"
-            android:layout_alignLeft="@+id/version_name"
-            android:layout_alignStart="@+id/version_name" />
-
-         <CheckBox
+            android:layout_below="@id/update_content_1"
+            android:textSize="14sp"
+            android:paddingTop="10dp"
+            android:layout_marginLeft="56dp"
+            />
+        <TextView
+            android:id="@+id/update_content_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:textSize="14sp"
+            android:layout_below="@id/update_content_2"
+            android:layout_marginLeft="56dp"
+            />
+        <CheckBox
             android:id="@+id/update_checkbox"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/update_checkbox_name"
-            android:textSize="16sp"
+            android:layout_above="@+id/update_after"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="26dp"
+            android:textSize="12sp"
             android:textColor="@color/black"
-            android:layout_below="@+id/update_message"
-            android:layout_alignLeft="@+id/update_message"
-            android:layout_alignStart="@+id/update_message"  />
-     
-         <LinearLayout
-            android:layout_width="match_parent"
+            android:text="忽略该版本" />
+
+        ;<ImageButton
+            android:id="@+id/update_after"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_below="@id/version_name"
-            android:layout_marginTop="200dp"
+            android:background="@drawable/check_new_cancel_btn"
+            android:layout_marginLeft="17dp"
+            android:layout_alignTop="@+id/update_now"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:id="@+id/linearLayout">
-
-            <Button
-                android:id="@+id/update_now"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/selector_update_dialog"
-                android:padding="5dp"
-                android:layout_marginLeft="30dp"
-                android:text="@string/update_btn_now" />
-
-            <Button
-                android:id="@+id/update_after"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/selector_update_dialog"
-                android:padding="5dp"
-                android:text="@string/update_btn_after"
-                android:layout_marginLeft="75dp"
-                 />
-        </LinearLayout>
-
-    </RelativeLayout>
-</RelativeLayout>
+            android:layout_alignParentStart="true" />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/version_title"
+            android:layout_marginLeft="15dp"
+            android:layout_toRightOf="@id/version_title"
+            android:layout_toEndOf="@id/version_title"
+            android:layout_marginTop="155dp"
+            android:background="@drawable/check_new_enter_btn"
+            android:id="@+id/update_now" /> -->
+ </RelativeLayout>
