--- a/res/layout/update_dialog.xml
+++ b/res/layout/update_dialog.xml
@@ -11,6 +11,7 @@
             android:layout_height="wrap_content"
             android:text="钱富通V2.0震撼发布"
             android:textSize="14sp"
+            android:textColor="@color/black"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="105dp" />
@@ -20,6 +21,7 @@
             android:layout_height="wrap_content"
             android:maxLines="2"
             android:textSize="14sp"
+            android:textColor="@color/black"
             android:layout_below="@id/version_title"
             android:paddingTop="10dp"
             android:layout_marginLeft="56dp"
@@ -29,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/update_content_1"
+            android:textColor="@color/black"
             android:textSize="14sp"
             android:paddingTop="10dp"
             android:layout_marginLeft="56dp"
@@ -39,6 +42,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
             android:textSize="14sp"
+            android:textColor="@color/black"
             android:layout_below="@id/update_content_2"
             android:layout_marginLeft="56dp"
             />
