--- a/res/layout/gesturepassword_unlock.xml
+++ b/res/layout/gesturepassword_unlock.xml
@@ -90,7 +90,7 @@
         android:layout_marginTop="0.0dip"
         android:gravity="center_horizontal"
         android:text="忘记密码"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/holo_blue_light"
         android:shadowColor="#e0ffffff"
         android:shadowDy="1.0"
         android:shadowRadius="1.0"
