--- a/res/layout/gesturepassword_create.xml
+++ b/res/layout/gesturepassword_create.xml
@@ -6,11 +6,30 @@
     android:background="@color/snow_white"
     android:orientation="vertical" >
 
-    <View
+    <!-- <View
         android:id="@+id/gesturepwd_creat_gap1"
         android:layout_width="fill_parent"
         android:layout_height="30.0dip"
-        android:layout_weight="1.0" />
+        android:layout_weight="1.0" /> -->
+    <LinearLayout 
+        android:id="@+id/gesturepwd_creat_gap1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        
+        <ImageButton
+            android:id="@+id/gesture_back_id"
+            android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:background="@drawable/button_back_selector"/>
+        <TextView 
+            android:layout_width="wrap_content"
+        	android:layout_height="wrap_content" 
+        	android:layout_gravity="center_vertical"
+        	android:layout_marginLeft="75dp"
+        	android:text="设置手势密码"
+        	/>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/gesturepwd_setting_preview"
@@ -20,11 +39,9 @@
         android:background="@drawable/gesture_create_grid_bg"
         android:orientation="vertical"
         android:padding="5.0dip" >
-
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="6.0dip" >
-
             <View
                 android:id="@+id/gesturepwd_setting_preview_0"
                 android:layout_width="6.0dip"
@@ -103,7 +120,7 @@
     <View
         android:id="@+id/gesturepwd_creat_gap2"
         android:layout_width="fill_parent"
-        android:layout_height="20.0dip"
+        android:layout_height="10.0dip"
         android:layout_weight="1.0" />
 
     <TextView
@@ -117,13 +134,13 @@
         android:shadowColor="#b3000000"
         android:shadowRadius="1.0"
         android:text="绘制解锁图案"
-        android:textColor="@android:color/white"
+        android:textColor="@color/gesture_line_true"
         android:textSize="16.0sp" />
 
     <View
         android:id="@+id/gesturepwd_creat_gap3"
         android:layout_width="fill_parent"
-        android:layout_height="8.0dip"
+        android:layout_height="4.0dip"
         android:layout_weight="1.0" />
 
     <com.qianft.m.qian.view.LockPatternView
@@ -131,7 +148,7 @@
         android:layout_width="288.0dip"
         android:layout_height="288.0dip"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10.0dip" />
+        android:layout_marginTop="5.0dip" />
 
     <View
         android:id="@+id/gesturepwd_creat_gap4"
@@ -142,9 +159,10 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal" 
+        >
 
-        <Button
+        <!-- <Button
             android:id="@+id/reset_btn"
             style="@style/ButtonRed"
             android:layout_width="0.0dip"
@@ -162,7 +180,18 @@
             android:layout_margin="15dip"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="保存" />
+            android:text="保存" /> -->
+           <Button
+            android:id="@+id/reset_btn"
+            android:layout_width="0.0dip"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dip"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textColor="@color/gesture_line_true"
+            android:background="@android:color/transparent"
+            android:text="重新设置" />
+         
     </LinearLayout>
 
 </LinearLayout>
