--- a/res/layout/gesturepassword_unlock.xml
+++ b/res/layout/gesturepassword_unlock.xml
@@ -6,6 +6,11 @@
     android:background="@color/snow_white"
     android:orientation="vertical" >
 
+    <WebView 
+        android:id="@+id/webview_unlock"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
     <View
         android:id="@id/gesturepwd_creat_gap1"
         android:layout_width="fill_parent"
