--- a/res/layout/activity_welcome.xml
+++ b/res/layout/activity_welcome.xml
@@ -5,11 +5,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-      
+    <!-- <include 
+        layout="@layout/drawer_content_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible"/> -->
+    <WebView 
+        android:id="@+id/webview_welcome"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="button"
+        android:text="TestJs"/>
     <ImageView 
       android:id="@+id/welcome_image"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:visibility="visible"
       android:scaleType="fitXY"
        />
     
