--- a/res/layout/gesturepassword_create.xml
+++ b/res/layout/gesturepassword_create.xml
@@ -26,8 +26,9 @@
             android:layout_width="wrap_content"
         	android:layout_height="wrap_content" 
         	android:layout_gravity="center_vertical"
-        	android:layout_marginLeft="75dp"
-        	android:text="设置手势密码"
+        	android:layout_marginLeft="65dp"
+        	android:textSize="20sp"
+        	android:text="@string/lockscreen_creat_title"
         	/>
     </LinearLayout>
 
@@ -38,6 +39,7 @@
         android:layout_gravity="center_horizontal"
         android:background="@drawable/gesture_create_grid_bg"
         android:orientation="vertical"
+        android:layout_marginTop="10dp"
         android:padding="5.0dip" >
         <LinearLayout
             android:layout_width="fill_parent"
@@ -115,13 +117,12 @@
                 android:background="@drawable/trans" />
         </LinearLayout>
     </LinearLayout>
-"
 
     <View
         android:id="@+id/gesturepwd_creat_gap2"
         android:layout_width="fill_parent"
         android:layout_height="10.0dip"
-        android:layout_weight="1.0" />
+        android:layout_weight="0.25" />
 
     <TextView
         android:id="@+id/gesturepwd_create_text"
@@ -133,28 +134,28 @@
         android:gravity="center_horizontal"
         android:shadowColor="#b3000000"
         android:shadowRadius="1.0"
-        android:text="绘制解锁图案"
+        android:text="@string/lockpattern_recording_intro_header"
         android:textColor="@color/gesture_line_true"
         android:textSize="16.0sp" />
 
     <View
         android:id="@+id/gesturepwd_creat_gap3"
         android:layout_width="fill_parent"
-        android:layout_height="4.0dip"
-        android:layout_weight="1.0" />
+        android:layout_height="1.0dip"
+        android:layout_weight="0.63" />
 
     <com.qianft.m.qian.view.LockPatternView
         android:id="@+id/gesturepwd_create_lockview"
         android:layout_width="288.0dip"
         android:layout_height="288.0dip"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5.0dip" />
+        android:layout_marginTop="0dip" />
 
     <View
         android:id="@+id/gesturepwd_creat_gap4"
         android:layout_width="fill_parent"
-        android:layout_height="10.0dip"
-        android:layout_weight="1.0" />
+        android:layout_height="5.0dip"
+        android:layout_weight="0.70" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -181,17 +182,18 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="保存" /> -->
-           <Button
+            
+        <Button
             android:id="@+id/reset_btn"
-            android:layout_width="0.0dip"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="15dip"
-            android:layout_weight="1"
+            android:layout_weight="1.0"
+            android:layout_marginBottom="30dp"
             android:gravity="center"
+            android:textSize="15sp"
             android:textColor="@color/gesture_line_true"
             android:background="@android:color/transparent"
-            android:text="重新设置" />
-         
+            android:text="@string/lockscreen_retry_setting_button" />
     </LinearLayout>
 
 </LinearLayout>
